// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babies reducer handles GET_BABIES_FAILURE 1`] = `
Object {
  "currentBabyId": null,
  "failure": true,
  "isFetching": false,
}
`;

exports[`babies reducer handles GET_BABIES_REQUEST 1`] = `
Object {
  "currentBabyId": null,
  "failure": false,
  "isFetching": true,
}
`;

exports[`babies reducer handles GET_BABIES_SUCCESS 1`] = `
Object {
  "currentBabyId": 1,
  "failure": false,
  "isFetching": false,
}
`;

exports[`babies reducer handles SELECT_BABY 1`] = `
Object {
  "currentBabyId": 1,
  "failure": false,
  "isFetching": false,
}
`;

exports[`babies reducer has an initial state 1`] = `
Object {
  "currentBabyId": null,
  "failure": false,
  "isFetching": false,
}
`;
